syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 990
// EnetChannelId: 0
// EnetIsReliable: true
message DungeonChallengeBeginNotify {
	uint32 challenge_id = 8;
	uint32 challenge_index = 11;
	repeated uint32 param_list = 13;
	uint32 group_id = 12;
	uint32 father_index = 6;
	repeated uint32 uid_list = 9;
}
