syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ChannellerSlabLoopDungeonResultInfo.proto";
import "DungeonSettleExhibitionInfo.proto";
import "EffigyChallengeDungeonResultInfo.proto";
//import "KHPIGECGFKI.proto";
import "ParamList.proto";
import "RoguelikeDungeonSettleInfo.proto";
import "StrengthenPointData.proto";
import "TowerLevelEndNotify.proto";
import "TrialAvatarFirstPassDungeonNotify.proto";

// CmdId: 982
// EnetChannelId: 0
// EnetIsReliable: true
message DungeonSettleNotify {
	uint32 dungeon_id = 9;
	bool is_success = 10;
	repeated uint32 fail_cond_list = 13;
	map<uint32, ParamList> settle_show = 11;
	uint32 close_time = 12;
	map<uint32, StrengthenPointData> strengthen_point_data_map = 4;
	uint32 result = 15;
	repeated DungeonSettleExhibitionInfo exhibition_info_list = 14;
	//uint32 OMBINLAOGBM = 5;
	oneof detail {
		TowerLevelEndNotify tower_level_end_notify = 97;
		TrialAvatarFirstPassDungeonNotify trial_avatar_first_pass_dungeon_notify = 796;
		ChannellerSlabLoopDungeonResultInfo channeller_slab_loop_dungeon_result_info = 1671;
		EffigyChallengeDungeonResultInfo effigy_challenge_dungeon_result_info = 1638;
		RoguelikeDungeonSettleInfo roguelike_dungeon_settle_info = 71;
		//KHPIGECGFKI crystal_link_settle_info = 430;
	}
}
