syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message FDEGJOCDDGH {
	uint32 challenge_id = 1;
	uint32 challenge_index = 2;
	bool is_success = 3;
	uint32 cur_progress = 4;
}
