syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2237
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message WatcherEventTypeNotify {
	uint32 watcher_trigger_type = 5;
	repeated uint32 param_list = 10;
	uint32 add_progress = 7;
}
